--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,7 +104,9 @@
     "source_location": "cpp",
     "utility": "cpp",
     "stop_token": "cpp",
-    "syncstream": "cpp"
+    "syncstream": "cpp",
+    "xlocale": "cpp",
+    "xstring": "cpp"
   },
   "C_Cpp.errorSquiggles": "Disabled"
 }
