some files location change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,7 +107,8 @@
     "syncstream": "cpp",
     "xlocale": "cpp",
     "xstring": "cpp",
-    "xtree": "cpp"
+    "xtree": "cpp",
+    "xutility": "cpp"
   },
   "C_Cpp.errorSquiggles": "Disabled"
 }
